fixed overlap on ultra slim screens for mywork

--- a/css/style.css
+++ b/css/style.css
@@ -255,3 +255,8 @@ p {
         margin-bottom: 1rem;
     }
 }
+@media screen and (max-width: 400px) {
+    .boxed {
+        margin-bottom: 8rem;
+    }
+}
